--- a/symfony_fw/templates/render/control_panel/microservice_deploy_profile.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_deploy_profile.html.twig
@@ -30,7 +30,8 @@
 
     <p class="info_field">{% trans %}microserviceDeployFormType_14_i{% endtrans %}</p>
     {{form_row(form.gitCloneUrl, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
-
+    
+    <p class="info_field">{% trans %}microserviceDeployFormType_15_i{% endtrans %}</p>
     {{form_row(form.gitCloneUrlUsername, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
     {{form_row(form.gitCloneUrlPassword, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
     {{form_row(form.gitClonePath, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
