--- a/symfony_fw/templates/render/control_panel/page_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/page_create.html.twig
@@ -47,6 +47,7 @@
         {{form_row(form.metaDescription, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.metaKeywords, {'dense': "", 'styleType': "outlinedTrailing"})}}
         {{form_row(form.metaRobots, {'dense': "", 'styleType': "outlinedTrailing"})}}
+        {{form_row(form.draft, {'dense': ""})}}
 
         {{form_widget(form._token)}}
 
