--- a/symfony_fw/templates/render/control_panel/microservice_unit_test_delete.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_unit_test_delete.html.twig
@@ -1,2 +1,4 @@
 <p>{% trans %}microserviceUnitTestDelete_1{% endtrans %}</p>
-<button id="cp_microservice_unit_test_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">{% trans %}microserviceUnitTestDelete_2{% endtrans %}</button>
+<button id="cp_microservice_unit_test_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">
+    {% trans %}microserviceUnitTestDelete_2{% endtrans %}
+</button>
