--- a/symfony_fw/templates/render/control_panel/module_delete.html.twig
+++ b/symfony_fw/templates/render/control_panel/module_delete.html.twig
@@ -1,2 +1,4 @@
 <p>{% trans %}moduleDelete_1{% endtrans %}</p>
-<button id="cp_module_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">{% trans %}moduleDelete_2{% endtrans %}</button>
+<button id="cp_module_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">
+    {% trans %}moduleDelete_2{% endtrans %}
+</button>
