--- a/symfony_fw/templates/render/control_panel/roleUser_delete.html.twig
+++ b/symfony_fw/templates/render/control_panel/roleUser_delete.html.twig
@@ -1,2 +1,4 @@
 <p>{% trans %}roleUserDelete_1{% endtrans %}</p>
-<button id="cp_roleUser_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">{% trans %}roleUserDelete_2{% endtrans %}</button>
+<button id="cp_roleUser_delete" class="mdc-button mdc-button--dense mdc-button--raised mdc-theme--secondary-bg" type="button">
+    {% trans %}roleUserDelete_2{% endtrans %}
+</button>
