Draft page improved.

--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -131,7 +131,8 @@
                         var textPage = {
                             'label_1': "{{"controlPanelPage_2"|trans}}",
                             'label_2': "{{"controlPanelPage_3"|trans}}",
-                            'label_3': "{{"controlPanelPage_4"|trans}}"
+                            'label_3': "{{"controlPanelPage_4"|trans}}",
+                            'label_4': "{{"controlPanelPage_5"|trans}}"
                         };
                     </script>
                     <script src="{{asset("js/system/control_panel/Page" ~ javascriptMinify)}}"></script>
@@ -459,7 +460,6 @@
             'cpPageProfileSort': "{{path("cp_page_profile_sort", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpPageProfileSave': "{{path("cp_page_profile_save", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpPageDelete': "{{path("cp_page_delete", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
-            'cpPagePublishDraft': "{{path("cp_page_publish_draft", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpUserCreate': "{{path("cp_user_create", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpUserSelect': "{{path("cp_user_select", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpUserProfile': "{{path("cp_user_profile", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
