--- a/symfony_fw/templates/include/upload_chunk.html.twig
+++ b/symfony_fw/templates/include/upload_chunk.html.twig
@@ -2,9 +2,10 @@
     <div class="form_row">
         <div class="material_upload">
             <button class="mdc-button mdc-button--dense mdc-button--raised" type="button">
-                <span class="material-icons mdc-button__icon">cloud_upload</span>
+                <i class="material-icons mdc-button__icon">cloud_upload</i>
                 <span>{{label}}</span>
             </button>
+            <p class="material_upload_label"></p>
             <input class="file" type="file" name="file" autocomplete="off" aria-label="label">
         </div>
     </div>
