--- a/symfony_fw/templates/render/control_panel/microservice_api_create.html.twig
+++ b/symfony_fw/templates/render/control_panel/microservice_api_create.html.twig
@@ -8,7 +8,7 @@
     <legend>{% trans %}microserviceApiCreate_2{% endtrans %}</legend>
     <p>{% trans %}microserviceApiCreate_3{% endtrans %}</p>
     <form id="form_cp_microservice_api_create" action="{{path("cp_microservice_api_create", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra})}}" method="post" novalidate="novalidate">
-        {{form_row(form.image)}}
+        {{form_row(form.image, {'label': "microserviceApiCreate_4"})}}
         {{form_row(form.name, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.controllerName, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
         {{form_row(form.description, {'dense': "", 'styleType': "outlinedTrailing", 'icon': "textsms"})}}
