--- a/symfony_fw/templates/render/myPage.html.twig
+++ b/symfony_fw/templates/render/myPage.html.twig
@@ -33,8 +33,11 @@
 <script nonce="{{php_session.xssProtectionValue}}">
     window.addEventListener("load", function() {
         myPageProfile.init();
-        
         myPagePayment.init();
+        
+        myPageProfile.action();
+        
+        myPagePayment.action();
         myPagePayment.changeView();
     }, false);
     
