--- a/symfony_fw/templates/render/control_panel_page_custom.html.twig
+++ b/symfony_fw/templates/render/control_panel_page_custom.html.twig
@@ -1,11 +1,13 @@
 <script nonce="{{php_session.xssProtectionValue}}">
+    "use strict";
+    
     window.addEventListener("load", function() {
     }, false);
 
     window.addEventListener("resize", function() {
     }, false);
 
-    var textCustom = {
+    window.textCustom = {
         'label_1': "custom"
     };
 </script>
