--- a/symfony_fw/templates/render/module/language_page.html.twig
+++ b/symfony_fw/templates/render/module/language_page.html.twig
@@ -20,7 +20,9 @@
     </form>
 </div>
 <script nonce="{{php_session.xssProtectionValue}}">
-    var textLanguagePage = {
+    "use strict";
+    
+    window.textLanguagePage = {
         'label_1': "{{"languagePage_1"|trans}}"
     };
 </script>
