--- a/symfony_fw/templates/include/google_script.html.twig
+++ b/symfony_fw/templates/include/google_script.html.twig
@@ -1,6 +1,8 @@
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script nonce="{{php_session.xssProtectionValue}}" async src="https://www.googletagmanager.com/gtag/js?id=1234"></script>
 <script nonce="{{php_session.xssProtectionValue}}">
+    "use strict";
+    
     window.addEventListener("load", function() {
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
