--- a/symfony_fw/templates/include/pageComment.html.twig
+++ b/symfony_fw/templates/include/pageComment.html.twig
@@ -38,7 +38,9 @@
 {% endif %}
 
 <script nonce="{{php_session.xssProtectionValue}}">
-    var textPageComment = {
+    "use strict";
+    
+    window.textPageComment = {
         'label_1': "{{"pageComment_2"|trans}}",
         'label_2': "{{"pageComment_3"|trans}}"
     };
