--- a/symfony_fw/templates/layout/layout_site_custom_bottom.html.twig
+++ b/symfony_fw/templates/layout/layout_site_custom_bottom.html.twig
@@ -1,3 +1,5 @@
 <script nonce="{{php_session.xssProtectionValue}}">
-    url['testCustom'] = "";
+    "use strict";
+    
+    window.url['testCustom'] = "";
 </script>
