--- a/symfony_fw/templates/render/control_panel.html.twig
+++ b/symfony_fw/templates/render/control_panel.html.twig
@@ -88,6 +88,8 @@
                     {{-render(controller("App\\Controller\\ControlPanel\\PaymentController::selectAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelPayment.init();
                             
@@ -99,7 +101,7 @@
                             controlPanelPayment.changeView();
                         }, false);
                         
-                        var textPayment = {
+                        window.textPayment = {
                             'label_1': "{{"controlPanelPayment_2"|trans}}",
                             'label_2': "{{"controlPanelPayment_3"|trans}}"
                         };
@@ -121,6 +123,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelPage.init();
                             
@@ -132,7 +136,7 @@
                             controlPanelPage.changeView();
                         }, false);
 
-                        var textPage = {
+                        window.textPage = {
                             'label_1': "{{"controlPanelPage_2"|trans}}",
                             'label_2': "{{"controlPanelPage_3"|trans}}",
                             'label_3': "{{"controlPanelPage_4"|trans}}",
@@ -156,6 +160,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelUser.init();
                             
@@ -167,7 +173,7 @@
                             controlPanelUser.changeView();
                         }, false);
 
-                        var textUser = {
+                        window.textUser = {
                             'label_1': "{{"controlPanelUser_2"|trans}}",
                             'label_2': "{{"controlPanelUser_3"|trans}}"
                         };
@@ -189,6 +195,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelModule.init();
                             
@@ -200,7 +208,7 @@
                             controlPanelModule.changeView();
                         }, false);
 
-                        var textModule = {
+                        window.textModule = {
                             'label_1': "{{"controlPanelModule_2"|trans}}",
                             'label_2': "{{"controlPanelModule_3"|trans}}"
                         };
@@ -222,6 +230,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelRoleUser.init();
                             
@@ -233,7 +243,7 @@
                             controlPanelRoleUser.changeView();
                         }, false);
 
-                        var textRole = {
+                        window.textRole = {
                             'label_1': "{{"controlPanelRole_2"|trans}}",
                             'label_2': "{{"controlPanelRole_3"|trans}}"
                         };
@@ -247,13 +257,15 @@
                     {{-render(controller("App\\Controller\\ControlPanel\\SettingController::saveAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelSetting.init();
                             
                             controlPanelSetting.action();
                         }, false);
                         
-                        var textSetting = {
+                        window.textSetting = {
                             'label_1': "{{"controlPanelSetting_2"|trans}}",
                             'label_2': "{{"controlPanelSetting_3"|trans}}",
                             'label_3': "{{"settingController_10"|trans}}",
@@ -269,13 +281,15 @@
                     {{-render(controller("App\\Controller\\ControlPanel\\SettingSlackIwController::renderAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelSettingSlackIw.init();
                             
                             controlPanelSettingSlackIw.action();
                         }, false);
                         
-                        var textSettingSlackIw = {
+                        window.textSettingSlackIw = {
                             'label_1': "{{"controlPanelSettingSlack_2"|trans}}"
                         };
                     </script>
@@ -288,13 +302,15 @@
                     {{-render(controller("App\\Controller\\ControlPanel\\SettingLinePushController::renderAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelSettingLinePush.init();
                             
                             controlPanelSettingLinePush.action();
                         }, false);
                         
-                        var textSettingLinePush = {
+                        window.textSettingLinePush = {
                             'label_1': "{{"controlPanelSettingLine_2"|trans}}"
                         };
                     </script>
@@ -317,6 +333,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelMicroserviceDeploy.init();
                             
@@ -328,7 +346,7 @@
                             controlPanelMicroserviceDeploy.changeView();
                         }, false);
 
-                        var textMicroserviceDeploy = {
+                        window.textMicroserviceDeploy = {
                             'label_1': "{{"controlPanelMicroserviceDeploy_2"|trans}}",
                             'label_2': "{{"controlPanelMicroserviceDeploy_3"|trans}}",
                             'label_3': "{{"controlPanelMicroserviceDeploy_4"|trans}}"
@@ -352,6 +370,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelMicroserviceApi.init();
                             controlPanelApiBasic.init();
@@ -360,7 +380,7 @@
                             controlPanelApiBasic.action();
                         }, false);
                         
-                        var textApiBasic = {
+                        window.textApiBasic = {
                             'label_1': "{{"apiBasic_1"|trans}}"
                         };
                     </script>
@@ -381,8 +401,8 @@
                     
                     {% set script = "<script id=\"unitTest_script\">\n"~
                     "   window.addEventListener(\"load\", function(event) {\n"~
-                    "       var page = JSON.stringify({\"page\": document.body.innerHTML});\n"~
-                    "       var iframe = document.querySelectorAll(\"#unitTest_iframe\")[0];\n\n"~
+                    "       let page = JSON.stringify({\"page\": document.body.innerHTML});\n"~
+                    "       let iframe = document.querySelectorAll(\"#unitTest_iframe\")[0];\n\n"~
                     "       iframe.contentWindow.postMessage(page, iframe.src);\n"~
                     "   }, false);\n"~
                     "</script>" %}
@@ -397,6 +417,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelMicroserviceUnitTest.init();
                             
@@ -408,7 +430,7 @@
                             controlPanelMicroserviceUnitTest.changeView();
                         }, false);
 
-                        var textMicroserviceUnitTest = {
+                        window.textMicroserviceUnitTest = {
                             'label_1': "{{"controlPanelMicroserviceUnitTest_3"|trans}}",
                             'label_2': "{{"controlPanelMicroserviceUnitTest_4"|trans}}"
                         };
@@ -461,6 +483,8 @@
                     {{-render(controller("App\\Controller\\ControlPanel\\MicroserviceSeleniumController::selectAction", {'_locale': urlLocale, 'urlCurrentPageId': urlCurrentPageId, 'urlExtra': urlExtra}))-}}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelMicroserviceSelenium.init();
                             
@@ -470,7 +494,7 @@
                         window.addEventListener("resize", function() {
                         }, false);
 
-                        var textMicroserviceSelenium = {
+                        window.textMicroserviceSelenium = {
                             'label_1': "{{"controlPanelMicroserviceSelenium_4"|trans}}"
                         };
                     </script>
@@ -504,6 +528,8 @@
                     {% endif %}
                     
                     <script nonce="{{php_session.xssProtectionValue}}">
+                        "use strict";
+                        
                         window.addEventListener("load", function() {
                             controlPanelMicroserviceCron.init();
                             
@@ -515,7 +541,7 @@
                             controlPanelMicroserviceCron.changeView();
                         }, false);
 
-                        var textMicroserviceCron = {
+                        window.textMicroserviceCron = {
                             'label_1': "{{"controlPanelMicroserviceCron_2"|trans}}",
                             'label_2': "{{"controlPanelMicroserviceCron_3"|trans}}"
                         };
@@ -535,7 +561,9 @@
 
 {% block scriptContainer %}
     <script nonce="{{php_session.xssProtectionValue}}">
-        var cpUrl = {
+        "use strict";
+        
+        window.cpUrl = {
             'cpPaymentUserSelect': "{{path("cp_payment_user_select", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpPaymentSelect': "{{path("cp_payment_select", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
             'cpPaymentProfile': "{{path("cp_payment_profile", {'_locale': urlLocale, 'urlCurrentPageId': 0, 'urlExtra': urlExtra})}}",
